syntax = "proto3";

package http.rest.channel;

import "google/api/annotations.proto";

service Channel {
  rpc Create(CreateReq) returns (CreateRsp) {
    option (google.api.http) = {
      post: "/zim/channels",
      body: "*"
    };
  }
  rpc Add(AddReq) returns (AddRsp) {
    option (google.api.http) = {
      post: "/zim/channels/{cid}/members",
      body: "*"
    };
  }
}

message CreateReq {
  // 群主
  string owner = 1;
  // 成员
  repeated string members = 2;
  // 群名称
  string name = 3;
  // 群ID，如果不传，zim会生成一个群ID
  string cid = 4;
  string notice = 5;
  string intro = 6;
  string avatar = 7;
}

message CreateRsp {
  // 群ID
  string cid = 1;
  // 其他字段
}

message AddReq {
  string cid = 1;
  repeated string members = 2;
}

message AddRsp {

}